# agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: deploy.yaml
app/: main.py
app/api/v1/: auth.py  interaction.py  router.py
app/core/: config.py  limiter.py  logging.py
app/core/langgraph/: graph.py
app/core/langgraph/tools/: __init__.py  duckduckgo_search.py
app/core/prompts/: __init__.py  system.md
app/core/system/: limiter.py  logging.py  middleware.py  telemetry.py
app/models/: base.py  database.py  session.py  thread.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  graph.py
app/services/: database_service.py  llm_registry.py  llm_service.py
app/utils/: __init__.py  auth.py  graph.py  sanitizer.py
grafana/dashboards/json/: llm_latency.json
logs/: development-2026-03-02.jsonl  development-2026-03-03.jsonl  development-2026-03-04.jsonl
prometheus/: prometheus.yml
scripts/: build-docker.sh  docker-entrypoint.sh  run-docker.sh  set-env.sh
