# ===========================
# Project Metadata
# ===========================
[project]
name = "agents"
version = "0.1.0"
description = "My Agentic AI System as a SaaS"
readme = "README.md"
requires-python = ">=3.12"

# ===========================
# Core Runtime Dependencies
# ===========================
dependencies = [
    "asgiref>=3.11.0",
    "bcrypt>=5.0.0",
    "colorama>=0.4.6",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "mem0ai>=1.0.2",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.24.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.31",
    "starlette-prometheus>=0.10.0",
    "structlog>=25.5.0",
    "supabase>=2.27.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.2",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]

# ===========================
# Optional dependencies
# ===========================
# Extra dependency set that can be installed with: `pip install agents[dev]`
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "ruff",
    "djlint==1.36.4",
]

# ===========================
# Dependency groups
# ===========================
[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

# ====================
# Pytest Configuration
# ====================
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_files = [
    "tests_*.py",
    "*_test.py",
    "tests/**/*.py",
]

# ====================
# Black (Code Formatter)
# ====================
[tool.black]
line-length = 119
exclude = "venv|migrations"    # Files and directories to exclude from formatting

# ====================
# Flake8 (Linting)
# ====================
[tool.flake8]
docstring-convention = "all"  # Enforce docstring conventions
ignore = [
    "D107", "D212", "E501", "W503", "W605", "D203", "D100",
]
exclude = "venv|migrations"
max-line-length = 119

# ====================
# Radon (Cyclomatic Complexity)
# ====================
# Maximum allowed cyclomatic complexity
radon-max-cc = 10

# ====================
# isort (Import Sorting)
# ====================
[tool.isort]
profile = "black"                  # Compatible with Black
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119
skip = ["migrations", "venv"]

# ====================
# Pylint Configuration
# ====================
[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]
[tool.pylint.master]
ignore = "migrations"

# ====================
# Ruff (Fast Linter)
# ====================
[tool.ruff]
line-length = 119
exclude = ["migrations", "*.ipynb", "venv"]
[tool.ruff.lint]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]        # Allow imports not at top in __init__.py
